--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,7 +22,19 @@ jobs:
         with:
           hugo-version: '0.141.0' # Versione di Hugo
           extended: true # Versione Extended
-          install-dart-sass: true # Installa Dart Sass automaticamente
+      
+      # NUOVI PASSI PER INSTALLARE DART SASS DIRETTAMENTE
+      - name: Install Dart Sass
+        run: |
+          SASS_VERSION=1.77.8 # Usiamo una versione recente specifica
+          # Scarica il pacchetto per Linux x64
+          wget -O dart-sass.tar.gz https://github.com/sass/dart-sass/releases/download/${SASS_VERSION}/dart-sass-${SASS_VERSION}-linux-x64.tar.gz
+          # Estrai l'archivio
+          tar -xf dart-sass.tar.gz
+          # Rimuovi l'archivio scaricato
+          rm dart-sass.tar.gz
+          # Aggiungi la cartella estratta (che contiene l'eseguibile 'sass') al PATH
+          echo "${PWD}/dart-sass" >> $GITHUB_PATH
 
       # I passi per Node.js e 'npm install -g sass' sono stati RIMOSSI
 
