--- a/hugo.toml
+++ b/hugo.toml
@@ -1,7 +1,85 @@
 baseURL = 'https://modernage12.github.io/lorenzosnotes/'
-languageCode = 'it-it'
 title = "Lorenzo's Notes"
 theme = "paige"
+
+# Rimuovi o commenta la vecchia riga languageCode = 'it-it' se presente qui fuori
+
+defaultContentLanguage = "it" # Imposta l'italiano come lingua predefinita
+
+[languages]
+  [languages.it]
+    title = "Lorenzo's Notes" # Titolo del sito in italiano
+    languageCode = "it-it"    # Codice lingua standard
+    languageName = "ITA"      # Testo che useremo nel selettore
+    contentDir = "content/it" # *** Cartella per i contenuti italiani ***
+    weight = 1                # Ordine della lingua (opzionale)
+	
+	[languages.it.menu] 
+      [[languages.it.menu.main]]
+        identifier = "home_it" # Meglio usare ID univoci per lingua
+        name = "Home"          # Nome in Italiano
+        url = "/"              # URL relativo alla lingua (Hugo gestisce /it/)
+        weight = 10            
+      [[languages.it.menu.main]]
+        identifier = "progetti_it"
+        name = "Progetti"      # Nome in Italiano
+        url = "/progetti/"     # URL relativo alla lingua
+        weight = 20
+      [[languages.it.menu.main]]
+        identifier = "chi-sono_it" 
+        name = "Chi Sono"      # Nome in Italiano
+        url = "/about/"        # URL relativo alla lingua
+        weight = 30
+      [[languages.it.menu.main]]
+        identifier = "contatti_it"
+        name = "Contatti"      # Nome in Italiano
+        url = "/contatti/"     # URL relativo alla lingua
+        weight = 40 
+      [[languages.it.menu.main]]
+        identifier = "blog_it"
+        name = "Blog"          # Nome in Italiano
+        url = "/blog/"         # URL relativo alla lingua
+        weight = 50 
+
+  [languages.en]
+    title = "Lorenzo's Notes" # Titolo del sito in inglese (può essere lo stesso o tradotto)
+    languageCode = "en-us"    # Codice lingua standard per inglese US (o usa en-gb)
+    languageName = "EN"       # Testo che useremo nel selettore
+    contentDir = "content/en" # *** Cartella per i contenuti inglesi ***
+    weight = 2                # Ordine della lingua (opzionale)
+	
+	[languages.en.menu]
+      [[languages.en.menu.main]]
+        identifier = "home_en" 
+        name = "Home"          # Nome in Inglese
+        url = "/"              # URL relativo alla lingua (Hugo gestisce /en/)
+        weight = 10            
+      [[languages.en.menu.main]]
+        identifier = "projects_en"
+        name = "Projects"      # Nome in Inglese
+        url = "/progetti/"     # URL relativo alla lingua (usa lo stesso path relativo!)
+        weight = 20
+      [[languages.en.menu.main]]
+        identifier = "about_en" 
+        name = "About Me"      # Nome in Inglese
+        url = "/about/"        # URL relativo alla lingua
+        weight = 30
+      [[languages.en.menu.main]]
+        identifier = "contact_en"
+        name = "Contact"       # Nome in Inglese
+        url = "/contatti/"     # URL relativo alla lingua
+        weight = 40 
+      [[languages.en.menu.main]]
+        identifier = "blog_en"
+        name = "Blog"          # Nome in Inglese (o come vuoi tradurlo)
+        url = "/blog/"         # URL relativo alla lingua
+        weight = 50 
+
+# Assicurati che le altre configurazioni (baseURL, theme, [params...], [menu...], ecc.) 
+# rimangano presenti nel file, dopo questa sezione [languages].
+# Potrebbe essere necessario spostare 'title' globale dentro [languages.it] e [languages.en]
+# Rimuovi la vecchia riga 'title = "Lorenzo's Notes"' se era a livello globale.
+
 [params.paige.site]
   color_scheme = "dark"
   disable_credit = true
